# weather

./: README.md  partitions.csv  sdkconfig  sdkconfig - 副本  sdkconfig.old
code/: 0.docx  0.inl  2.c
code/PNG/: 0.inl  1.inl  10.inl  11.inl  12.inl  13.inl  14.inl  15.inl  16.inl  17.inl  18.inl  19.inl  2.inl  20.inl  21.inl  22.inl  23.inl  24.inl  25.inl  26.inl  27.inl  28.inl  29.inl  3.inl  30.inl  31.inl  32.inl  33.inl  34.inl  35.inl  36.inl  37.inl  38.inl  4.inl  5.inl  6.inl  7.inl  8.inl  9.inl  99.inl
components/: CMakeLists.txt  component.mk
components/iconv/: component.mk
components/iconv/lib/: libiconv.la
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.txt  MFRC522.h  MFRC_Task.c  MFRC_Task.h  RC522.c  asc.fon  code.c  code.h  component.mk  decode_image.c  decode_image.h  f_index.txt  hzk16s.fon  hzk32s.fon  lcd.c  lcd.h  result.txt  result2.txt  touch.c  touch.h  user_http_s.c  user_http_s.h  wpa2_enterprise_main.c
